# VokzalProject

./: CMakeLists.txt  README.md  addingdialog.cpp  addingdialog.h  addingdialog.ui  deldialog.cpp  deldialog.h  deldialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: discount.cpp  discount.h  passenger.cpp  passenger.h  station.cpp  station.h  tariff.cpp  tariff.h  ticket.cpp  ticket.h  types.h
